--- a/index.html
+++ b/index.html
@@ -115,80 +115,23 @@
 
   <!-- OPT IN SECTION
   ============================================= -->
-  <section>
+  <section id="optin">
+    <div class="container">
+      <div class="row">
 
-    <div class="container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eius recusandae sunt
-      eaque, neque, quisquam harum pariatur esse alias ab molestias distinctio voluptas ut dolor cumque rem! Tenetur
-      sit aliquid, ea minus optio sint voluptatibus esse. Itaque rerum, quia atque provident non tempore recusandae
-      natus molestiae voluptatem! Ea quos similique alias nihil at soluta beatae minima molestias reprehenderit? Odio
-      illum provident ut consectetur deserunt quas commodi error quisquam porro vero hic excepturi, dolores nisi
-      repellendus ab pariatur, velit numquam temporibus nulla adipisci? Quasi, magnam fugiat incidunt veritatis dolorem
-      corporis quia non praesentium sapiente itaque repellendus. Corrupti sit, doloremque cupiditate repellendus
-      voluptates quidem eius tempore quae recusandae saepe veritatis incidunt itaque, quaerat tempora reiciendis
-      placeat natus error aperiam ut eligendi? Saepe nam cumque, in ipsam itaque ullam error cum temporibus commodi
-      nesciunt repellendus odit consequatur esse laboriosam sint molestias sapiente magni pariatur soluta deserunt.
-      Illum asperiores assumenda ducimus quis voluptate, odio voluptas qui earum inventore. Quae blanditiis libero quos
-      consequatur, dicta aspernatur animi recusandae placeat suscipit nesciunt in voluptatem quisquam perferendis
-      molestias rerum, nemo earum quasi vero? Enim accusantium saepe earum delectus architecto hic nobis. Dolor,
-      aliquid. Cupiditate, provident alias, exercitationem officia eos facere quis perferendis eligendi mollitia
-      distinctio voluptate debitis quam temporibus quas error voluptatibus voluptates commodi, fuga laborum vel
-      consequatur voluptatem accusantium. Sunt dolorum aut maiores neque commodi repudiandae quos amet nisi. Ex quaerat
-      odio odit nihil incidunt, consequatur non tenetur pariatur architecto amet ad omnis repellat, dolore blanditiis
-      debitis atque iure reiciendis distinctio itaque. Suscipit, illum earum! Quis quam tempore velit sint officia
-      voluptates corporis adipisci nesciunt itaque atque illum cupiditate doloribus vitae excepturi necessitatibus
-      suscipit, minus quisquam veniam praesentium aperiam, placeat aliquid asperiores? Consequatur veritatis quo quia,
-      laborum velit voluptatem omnis reiciendis in quasi molestias perspiciatis placeat quod tempore quas debitis ipsum
-      dignissimos officia porro, possimus odio temporibus illum. Aspernatur reiciendis ratione fuga necessitatibus
-      ipsam dignissimos suscipit tempore odio provident libero vero, accusantium eos excepturi qui! Laudantium cumque
-      accusamus architecto temporibus quas fugit? Veniam velit, nihil aperiam sed at dolor odit harum officiis. Non
-      beatae aut culpa officiis deserunt recusandae delectus consequuntur pariatur reprehenderit, dolorem omnis
-      doloribus odio ipsa laboriosam natus tempora ab itaque expedita dolores officia id cum, voluptatibus quaerat!
-      Aliquid officia maxime repellat temporibus saepe ex, minus dignissimos esse quam sequi veniam. Inventore totam,
-      molestiae doloremque, veniam illo eius fugit enim quo nisi facere est autem iste consequatur voluptas esse dolor,
-      provident corporis blanditiis reiciendis repellat ipsam velit neque? Voluptatem repellendus et est quod debitis
-      qui possimus, accusamus labore dolorum iste. Quam eos quaerat accusantium tempora, ea, numquam enim velit
-      laboriosam iusto quibusdam eaque facere in repudiandae atque totam magni soluta doloremque sit quo, hic
-      aspernatur fugiat tempore alias voluptatem. Deleniti eos unde nostrum adipisci! Dignissimos, officia autem animi
-      veniam perspiciatis, corrupti eos et quidem molestiae unde natus doloribus magni impedit iure aperiam eius?
-      Dolores quasi consectetur aliquam. Dicta, ducimus libero. Aut, quam quisquam ad odio et voluptate saepe est.
-      Provident excepturi facilis ipsum quaerat vitae pariatur magni itaque fugit corrupti alias cupiditate voluptates
-      esse quod voluptatibus in autem, voluptatum dignissimos mollitia doloremque nisi debitis quis porro quasi? Et ab
-      labore enim perspiciatis laboriosam, amet totam reprehenderit praesentium rem at officiis illo optio quae vero
-      deleniti pariatur ratione facere expedita iste sequi ducimus provident dolore laborum? Iste corporis enim ad ut
-      eos saepe deserunt necessitatibus quia, sint deleniti consequatur quae sed sequi quibusdam, itaque at maxime? Non
-      eos ipsa excepturi doloribus quibusdam vel repellendus incidunt consequatur, dolor a voluptate blanditiis quam
-      natus quia! Aspernatur eaque id vero delectus amet reiciendis similique nobis nemo, tempora cupiditate doloribus
-      ad iusto obcaecati exercitationem dolore, blanditiis nulla doloremque fugiat perspiciatis. Aspernatur voluptatem
-      incidunt quis rerum commodi ullam facere officiis qui? Excepturi ab ullam hic odio magnam illo nihil nostrum
-      quaerat minus maiores praesentium architecto quo deserunt aperiam, ut consequatur, modi nemo explicabo soluta
-      iste, provident sit saepe. Sequi neque in molestias sed voluptas asperiores amet! Excepturi maxime debitis, non
-      libero animi possimus unde quisquam, dicta deserunt laboriosam ducimus corporis repudiandae omnis, in dolorum
-      vitae. Fuga voluptate quia veniam ab corrupti distinctio officiis harum non, eos illum debitis. Deleniti nihil
-      repellendus mollitia. Rerum, sed amet quae magni ad cum hic ipsa temporibus, ex, perspiciatis voluptate id
-      placeat aperiam! Facilis, ducimus tempore beatae dolorem harum debitis inventore incidunt, deserunt magni sint
-      hic suscipit quam. Possimus voluptas officia praesentium odio, iusto voluptatum fuga ex, itaque, odit optio
-      commodi! Est officia dignissimos id quas placeat possimus quis. Tempore veritatis possimus voluptate voluptas
-      temporibus exercitationem! Illum magnam obcaecati consectetur assumenda deleniti nemo quos harum, sint nihil,
-      iure voluptas. Inventore nulla et magnam ratione quisquam iure vero iste suscipit eius nemo perferendis ut quod
-      est doloremque pariatur ea cumque laboriosam voluptatem, natus mollitia impedit modi provident dolore culpa!
-      Inventore quidem ad odit, eum necessitatibus aspernatur doloremque repellat quod temporibus possimus omnis esse
-      est velit. Odio quia numquam modi magni repellendus tempora libero enim earum adipisci fuga nisi eaque temporibus
-      aspernatur nulla saepe ipsam qui, mollitia labore commodi quam. Rem itaque voluptates aliquid eveniet numquam
-      culpa, eos, in corporis corrupti laborum fuga facilis consequatur. Nostrum, similique accusantium! Voluptates
-      fugiat sint repellendus ad a culpa itaque eveniet alias quidem qui voluptatum dolorem ea eum asperiores
-      laboriosam hic quo officiis, fuga beatae perferendis totam, numquam quia sunt veritatis. Architecto
-      reprehenderit, quidem minima porro consequatur ducimus fuga beatae aspernatur voluptates ab iusto deserunt, nihil
-      est, temporibus dignissimos. Incidunt laudantium distinctio asperiores earum? Vel ratione nemo nesciunt
-      consequatur. Omnis error nam aspernatur, iure voluptas neque sapiente alias iste rerum tempore reprehenderit!
-      Labore autem minima harum! In, distinctio. Repudiandae quam quae veniam repellendus ab suscipit vel error,
-      corporis accusamus fuga sequi temporibus officiis magni, consectetur cumque iste dolor fugiat quibusdam nobis
-      alias atque ratione tempore tenetur recusandae. Explicabo voluptatibus eaque alias accusamus debitis quis
-      reprehenderit nemo consequuntur numquam id commodi provident illum, necessitatibus consectetur ducimus minima at
-      blanditiis modi velit sunt soluta assumenda voluptatum ratione? Quo velit cum optio, voluptatum itaque temporibus
-      doloribus maiores dolorum repellendus delectus animi sapiente nesciunt nam sunt unde. Perspiciatis dolor
-      voluptatum natus cumque animi voluptatem illum.</div>
+        <div class="col-sm-8">
+          <p class="lead"><strong>Subscribe to our mailing list.</strong> We'll send you something special.</p>
+        </div><!-- col -->
 
-  </section>
+        <div class="col-sm-4">
+          <button class="btn btn-lg btn-success btn-block" data-toggle="modal" data-target="#myModal">
+            Click here to subscribe
+          </button>
+        </div><!-- col -->
+
+      </div><!-- row -->
+    </div><!-- container -->
+  </section><!-- optin -->
 
   <!-- BOOST YOUR INCOME
   ============================================= -->
