--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- FontAwesome Icons -->
-  <link href="assets/css/font-awesome/css/fontawesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
   <!-- Custom CSS -->
   <link href="assets/css/custom.css" rel="stylesheet">
@@ -189,9 +189,39 @@
 
   <!-- MODAL
   ============================================= -->
-  <div>
+  <div class="modal fade" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
 
-  </div>
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title" id="myModalLabel"><i class="fa fa-envelope"></i> Subscribe to our Mailing List</h4>
+        </div><!-- modal header -->
+
+        <div class="modal-body">
+          <p>Simply enter your name and email! As a thank you for joining us, we're going to give you one of our best-selling courses, <em>for free!</em></p>
+
+          <form class="form-inline" role="form">
+            <div class="form-group">
+              <label class="sr-only" for="subscribe-name">Your first name</label>
+              <input type="text" class="form-control" id="subscribe-name" placeholder="Your first name" />
+            </div><!-- form-group -->
+            <div class="form-group">
+              <label class="sr-only" for="subscribe-email">and your email</label>
+              <input type="text" class="form-control" id="subscribe-email" placeholder="and your email" />
+            </div><!-- form-group -->
+
+            <input type="submit" class="btn btn-danger" value="Subscribe!" />
+          </form>
+
+          <hr>
+
+          <p><small>By providing your email you consent to receiving occasional promotional emails &amp; newsletters. <br>No Spam. Just good stuff. We respect your privacy &amp; you may unsubscribe at any time.</small></p>
+        </div><!-- modal-body -->
+
+      </div><!-- modal content -->
+    </div><!-- modal-dialog -->
+  </div><!-- modal -->
 
   <!-- BOOTSTRAP CORE JAVASCRIPT
        Placed at the end of the document so the pages load faster
@@ -199,6 +229,7 @@
   ============================================= -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="assets/js/jquery-2.1.1.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
   <script src="assets/js/main.js"></script>
 
 </body>
