Price media queries

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <div id="price-timeline">
               <div class="price active">
-                <h4>Pre-Launch Price <small>Ends soon!</small></small></h4>
+                <h4>Pre-<br>Launch <br>Price <small>Ends soon!</small></small></h4>
 
                 <span>$149</span>
               </div><!-- price -->
