--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- FontAwesome Icons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous">
 
   <!-- Custom CSS -->
   <link href="assets/css/custom.css" rel="stylesheet">
@@ -143,16 +144,21 @@
         <h2>How You Can Boost Your Income</h2>
       </div><!-- section-header -->
 
-      <p class="lead">Whether you&rsquo;re a freelance designer, enterpreneur, employee for a company, code hobbyist, or looking for a new career &mdash; this course gives you an immensely valuable skill that will enable you to either:</p>
-      
+      <p class="lead">Whether you&rsquo;re a freelance designer, enterpreneur, employee for a company, code hobbyist,
+        or looking for a new career &mdash; this course gives you an immensely valuable skill that will enable you to
+        either:</p>
+
       <div class="row">
         <div class="col-sm-6">
           <h3>Make money on the side</h3>
-          <p>So you can save up for that Hawaiian vacation you&rsquo;ve been wanting, help pay off your debt, your car, your mortgage, or simply just to have bonus cash laying around.</p>
+          <p>So you can save up for that Hawaiian vacation you&rsquo;ve been wanting, help pay off your debt, your car,
+            your mortgage, or simply just to have bonus cash laying around.</p>
         </div><!-- col -->
         <div class="col-sm-6">
           <h3>Create a full-time income</h3>
-          <p>WordPress developers have options. Many developers make a generous living off of creating custom WordPress themes and selling them on websites like ThemeForest. Freelance designers and developers can also take on WordPress projects and make an extra $1,000 - $5,000+ per month.</p>
+          <p>WordPress developers have options. Many developers make a generous living off of creating custom WordPress
+            themes and selling them on websites like ThemeForest. Freelance designers and developers can also take on
+            WordPress projects and make an extra $1,000 - $5,000+ per month.</p>
         </div><!-- col -->
       </div><!-- row -->
 
@@ -166,30 +172,44 @@
 
       <div class="section-header">
         <img src="assets/img/icon-pad.png" alt="Pad and pencil">
-        <h2>Who Should Take This Course?</h2>
+        <h2>Who Should Learn WordPress?</h2>
       </div><!-- section header -->
 
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
 
           <h3>Graphics &amp; Web Designers</h3>
-          <p>Graphic designers are extremely talented, but ask them to code their designs and they’ll freeze up! This leaves them with no other choice but to hire a web developer. Any professional graphic designers knows web developers can be expensive.</p>
-          <p>If you&rsquo;re a designer, learning to code your own WordPress websites can change your business entirely! Now, not only are you a great designer, but you’re a skillful developer, too! This puts you in a position to <strong>make an extra $1,000 – $5,000 per project.</strong></p>
+          <p>Graphic designers are extremely talented, but ask them to code their designs and they’ll freeze up! This
+            leaves them with no other choice but to hire a web developer. Any professional graphic designers knows web
+            developers can be expensive.</p>
+          <p>If you&rsquo;re a designer, learning to code your own WordPress websites can change your business
+            entirely! Now, not only are you a great designer, but you’re a skillful developer, too! This puts you in a
+            position to <strong>make an extra $1,000 – $5,000 per project.</strong></p>
 
           <h3>Entrepreneurs</h3>
-          <p>Entrepreneurs have big dreams, and in many cases, shoestring budgets. In order to survive in the cut-throat world of the Startup company, it’s a necessity to have a world-class website. However, world-class websites come with a large price tag.</p>
-          <p>If you can learn how to build a high-quality startup website by yourself, then you’ve just saved yourself a lot of cash, <strong>tens of thousands of dollars in many cases.</strong></p>
+          <p>Entrepreneurs have big dreams, and in many cases, shoestring budgets. In order to survive in the
+            cut-throat world of the Startup company, it’s a necessity to have a world-class website. However,
+            world-class websites come with a large price tag.</p>
+          <p>If you can learn how to build a high-quality startup website by yourself, then you’ve just saved yourself
+            a lot of cash, <strong>tens of thousands of dollars in many cases.</strong></p>
 
           <h3>Employees</h3>
           <p>Any company knows the education & training of their employees is key to a thriving team.</p>
-          <p>Depending on the type of company you work for, if you understand how to code, and can develop CMS driven websites, that gives you <strong>negotiating power for a better position, or a higher salary.</strong></p>
+          <p>Depending on the type of company you work for, if you understand how to code, and can develop CMS driven
+            websites, that gives you <strong>negotiating power for a better position, or a higher salary.</strong></p>
 
           <h3>Code Hobbyists</h3>
-          <p>It’s fun to learn challenging new skills. Code hobbyists can add dynamic websites to their arsenal of tools to play with — you can even <strong>sell WordPress themes and plugins for cash!</strong> The possibilities are truly endless.</p>
+          <p>It’s fun to learn challenging new skills. Code hobbyists can add dynamic websites to their arsenal of
+            tools to play with — you can even <strong>sell WordPress themes and plugins for cash!</strong> The
+            possibilities are truly endless.</p>
 
           <h3>People Looking for a New Career</h3>
-          <p>Are you out of work? Looking for a more rewarding job? Desire a career that can allow you to work almost anywhere in the world? Becoming a Web Developer might be the answer for you.</p>
-          <p><strong>Web developers are paid well, anywhere from $33,000 to more than $105,000 per year.</strong> They get to work at amazing companies that are changing the world, or they enjoy the ability to start their own companies, become location-independent and work from home, from coffee shops, in an airplane, on the beach, or wherever they want!</p>
+          <p>Are you out of work? Looking for a more rewarding job? Desire a career that can allow you to work almost
+            anywhere in the world? Becoming a Web Developer might be the answer for you.</p>
+          <p><strong>Web developers are paid well, anywhere from $33,000 to more than $105,000 per year.</strong> They
+            get to work at amazing companies that are changing the world, or they enjoy the ability to start their own
+            companies, become location-independent and work from home, from coffee shops, in an airplane, on the beach,
+            or wherever they want!</p>
 
         </div><!-- col -->
       </div><!-- row -->
@@ -250,7 +270,9 @@
     <div class="container">
 
       <h2>Final Project Features</h2>
-      <p class="lead">Throughout this entire course, you work towards building an incredible beautiful website. Want to see the website <strong>you</strong> are going to build <em>You're looking at it!</em> The website you're using right now is the website you will have built entirely by yourself, by the end of this course.</p>
+      <p class="lead">Throughout this entire course, you work towards building an incredible beautiful website. Want to
+        see the website <strong>you</strong> are going to build <em>You're looking at it!</em> The website you're using
+        right now is the website you will have built entirely by yourself, by the end of this course.</p>
 
       <div class="row">
         <div class="col-sm-4">
@@ -266,7 +288,8 @@
         <div class="col-sm-4">
           <img src="assets/img/icon-cms.png" alt="CMS">
           <h3>Easy-to-use CMS</h3>
-          <p>Allow your clients to easily update their websites by converting your static websites to dynamic websites, using WordPress.</p>
+          <p>Allow your clients to easily update their websites by converting your static websites to dynamic websites,
+            using WordPress.</p>
         </div><!-- end col -->
       </div><!-- row -->
 
@@ -280,7 +303,8 @@
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <h2>Watch the Freelance Introduction</h2>
-          <iframe width="100%" height="415" src="https://www.youtube.com/embed/g2CEmewuugo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" height="415" src="https://www.youtube.com/embed/g2CEmewuugo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div><!-- end col -->
       </div><!-- row -->
     </div><!-- container -->
@@ -303,13 +327,21 @@
             </div><!-- end col-->
           </div><!-- row -->
 
-          <p class="lead">A highly skilled professional, John Doe is a passionate and experienced web designer, developer, blogger and digital entrepreneur.</p>
+          <p class="lead">A highly skilled professional, John Doe is a passionate and experienced web designer,
+            developer, blogger and digital entrepreneur.</p>
 
-          <p>Hailing from North Of The Wall (Yellowknife, Canada), John made the trek to the Wet Coast (Vancouver, Canada) to educate and equip himself with the necessary skills to become a spearhead in his trade of solving problems on the web, crafting design solutions, and speaking in code.</p>
+          <p>Hailing from North Of The Wall (Yellowknife, Canada), John made the trek to the Wet Coast (Vancouver,
+            Canada) to educate and equip himself with the necessary skills to become a spearhead in his trade of
+            solving problems on the web, crafting design solutions, and speaking in code.</p>
 
-          <p>John's determination and love for what he does has landed him in some pretty interesting places with some neat people. He's had the privilege of working with, and providing solutions for, numerous businesses, big &amp; small, across the Americas.</p>
+          <p>John's determination and love for what he does has landed him in some pretty interesting places with some
+            neat people. He's had the privilege of working with, and providing solutions for, numerous businesses, big
+            &amp; small, across the Americas.</p>
 
-          <p>John builds custom websites, and provides design solutions for a wide-array of clientele at his company, Doe Studios. He regularly blogs about passive income, living your life to the fullest, and provides premium quality web design tutorials and courses for tens of thousands of amazing people desiring to master their craft.</p>
+          <p>John builds custom websites, and provides design solutions for a wide-array of clientele at his company,
+            Doe Studios. He regularly blogs about passive income, living your life to the fullest, and provides premium
+            quality web design tutorials and courses for tens of thousands of amazing people desiring to master their
+            craft.</p>
 
           <hr>
 
@@ -362,7 +394,10 @@
             </div><!-- end col -->
             <div class="col-sm-8">
               <blockquote>
-                These videos are well created, concise, fast-paced, easy to follow, and just funny enough to keep you chuckling as you're slamming out lines of code. I've taken 3 courses from this instructor. Whenever I have questions he is right there with a simple solution or a helpful suggestion to keep me going forward with the course work.
+                These videos are well created, concise, fast-paced, easy to follow, and just funny enough to keep you
+                chuckling as you're slamming out lines of code. I've taken 3 courses from this instructor. Whenever I
+                have questions he is right there with a simple solution or a helpful suggestion to keep me going
+                forward with the course work.
                 <cite>&mdash; Brennan, graduate of all John's courses</cite>
               </blockquote>
             </div><!-- end col -->
@@ -370,42 +405,47 @@
 
           <!-- TESTIMONIAL -->
           <div class="row testimonial">
-              <div class="col-sm-4">
-                <img src="assets/img/ben.png" alt="Illustration of a man with a moustache">
-              </div><!-- end col -->
-              <div class="col-sm-8">
-                <blockquote>
-                  I found John to be a great teacher, and a very inspiring person. It's clear he is very passionate about helping designers learn to code, and I look forward to more courses from him!
-                  <cite>&mdash; Ben, graduate of Build a Website from Scratch with HTML &amp; CSS</cite>
-                </blockquote>
-              </div><!-- end col -->
-            </div><!-- row -->
+            <div class="col-sm-4">
+              <img src="assets/img/ben.png" alt="Illustration of a man with a moustache">
+            </div><!-- end col -->
+            <div class="col-sm-8">
+              <blockquote>
+                I found John to be a great teacher, and a very inspiring person. It's clear he is very passionate about
+                helping designers learn to code, and I look forward to more courses from him!
+                <cite>&mdash; Ben, graduate of Build a Website from Scratch with HTML &amp; CSS</cite>
+              </blockquote>
+            </div><!-- end col -->
+          </div><!-- row -->
 
           <!-- TESTIMONIAL -->
           <div class="row testimonial">
-              <div class="col-sm-4">
-                <img src="assets/img/aj.png" alt="Illustration of a man with a beard">
-              </div><!-- end col -->
-              <div class="col-sm-8">
-                <blockquote>
-                  John iz amazing and I honestly think he's the best tutor of all the courses I have taken on Udemy. Will definitely be following him in the future. Thanks Brad!
-                  <cite>&mdash; AJ, graduate of Code a Responsive Website with Bootstrap 3</cite>
-                </blockquote>
-              </div><!-- end col -->
-            </div><!-- row -->
+            <div class="col-sm-4">
+              <img src="assets/img/aj.png" alt="Illustration of a man with a beard">
+            </div><!-- end col -->
+            <div class="col-sm-8">
+              <blockquote>
+                John iz amazing and I honestly think he's the best tutor of all the courses I have taken on Udemy. Will
+                definitely be following him in the future. Thanks Brad!
+                <cite>&mdash; AJ, graduate of Code a Responsive Website with Bootstrap 3</cite>
+              </blockquote>
+            </div><!-- end col -->
+          </div><!-- row -->
 
           <!-- TESTIMONIAL -->
           <div class="row testimonial">
-              <div class="col-sm-4">
-                <img src="assets/img/ernest.png" alt="Illustration of a man with a goatee">
-              </div><!-- end col -->
-              <div class="col-sm-8">
-                <blockquote>
-                  John is an excellent instructor. His content is super high quality, and you can see the love and care put into every section. The tutorials are the perfect length, and you feel like your doing something right out the gate! I really can't believe this is free. I highly recommend taking advantage of this course.
-                  <cite>&mdash; Ernest, graduate of Code Dynamic Websites with PHP</cite>
-                </blockquote>
-              </div><!-- end col -->
-            </div><!-- row -->
+            <div class="col-sm-4">
+              <img src="assets/img/ernest.png" alt="Illustration of a man with a goatee">
+            </div><!-- end col -->
+            <div class="col-sm-8">
+              <blockquote>
+                John is an excellent instructor. His content is super high quality, and you can see the love and care
+                put into every section. The tutorials are the perfect length, and you feel like your doing something
+                right out the gate! I really can't believe this is free. I highly recommend taking advantage of this
+                course.
+                <cite>&mdash; Ernest, graduate of Code Dynamic Websites with PHP</cite>
+              </blockquote>
+            </div><!-- end col -->
+          </div><!-- row -->
 
         </div><!-- end col -->
       </div><!-- row -->
@@ -461,7 +501,8 @@
         </div><!-- modal header -->
 
         <div class="modal-body">
-          <p>Simply enter your name and email! As a thank you for joining us, we're going to give you one of our best-selling courses, <em>for free!</em></p>
+          <p>Simply enter your name and email! As a thank you for joining us, we're going to give you one of our
+            best-selling courses, <em>for free!</em></p>
 
           <form class="form-inline" role="form">
             <div class="form-group">
@@ -478,7 +519,8 @@
 
           <hr>
 
-          <p><small>By providing your email you consent to receiving occasional promotional emails &amp; newsletters. <br>No Spam. Just good stuff. We respect your privacy &amp; you may unsubscribe at any time.</small></p>
+          <p><small>By providing your email you consent to receiving occasional promotional emails &amp; newsletters.
+              <br>No Spam. Just good stuff. We respect your privacy &amp; you may unsubscribe at any time.</small></p>
         </div><!-- modal-body -->
 
       </div><!-- modal content -->
